Dead code removed & bug fix in googe auth
